# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: tests.yml
page_analyzer/: __init__.py  app.py  db.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
